tests/arch/riscv/error/compiler/test_riscv_error_compiler_007.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
    byte: .byte 498
.text
main:
   li t0, 10
    j mains